site refactored for Jekyll

--- a/_includes/contact-scripts.html
+++ b/_includes/contact-scripts.html
@@ -1,8 +1,7 @@
-{% if page.master-slider %}
-<!-- Plugin Styles -->
-<link rel="stylesheet" href="../assets/plugins/masterslider/style/masterslider.css">
-<link rel='stylesheet' href="../assets/plugins/masterslider/skins/default/style.css">
-
+{% if page.contact-scripts %}
+ <!-- Plugin Styles -->
+  <link rel="stylesheet" href="../assets/plugins/masterslider/style/masterslider.css">
+  <link rel='stylesheet' href="../assets/plugins/masterslider/skins/default/style.css">
 <!-- Master Slider -->
 <script src="/assets/plugins/masterslider/masterslider.min.js"></script>
 <script src="/assets/plugins/masterslider/jquery.easing.min.js"></script>
