--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,11 +7,11 @@
           <h3>Product Support</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="technical-reference.html">Technical Reference</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="service-repairs-returns.html">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="safety-information.html">Safety Information</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="custom-waterblast-solutions.html">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/product-catalogs">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/technical-reference">Technical Reference</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/service">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/safety">Safety Information</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/custom-solutions">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
@@ -20,10 +20,10 @@
           <h3>About StoneAge</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="about-stoneage.html">Our Story</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="careers.html">Careers</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="press.html">Press</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="contact.html">Contact</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/about">Our Story</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/jobs">Careers</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/news">News</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/contact">Contact</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
@@ -41,7 +41,7 @@
       </div>
 
       <div class="col-sm-3">
-        <a href="index.html"><img class="footer-logo" src="assets/img/stoneage-negative.png" alt="StoneAge - Engineering the Power of Water"></a>
+        <a href="/"><img class="footer-logo" src="assets/img/stoneage-negative.png" alt="StoneAge - Engineering the Power of Water"></a>
       </div>
 
     </div>
@@ -50,7 +50,7 @@
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2016 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a>
+        <p>2016 &copy; All Rights Reserved. <a href="/patents">Patents</a> | <a href="/trademarks">Trademarks</a> | <a href="/terms">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
@@ -70,6 +70,9 @@
   
   <!-- product slider script dependencies -->
   {% include master-slider.html %}
+
+  <!-- contact script dependencies -->
+  {% include main-contact.html %}
   
   <!-- Start of Async HubSpot Analytics Code -->
   <script type="text/javascript">
