--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,6 @@
     <div class="container">
       <div class="col-sm-4">
         <ul class="list-inline">
-<!--            <li><a><i class="fa fa-globe"></i> Languages</a></li>-->
           <li>
             <div class="dropdown social-share">
               <a href="#" class="dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-share-alt"></i> Social Media</a>
@@ -20,11 +19,10 @@
       </div>
       <div class="col-sm-8 utils">
         <ul class="list-inline">
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="/contact">Contact Us</a></li>
           <li><a href="request-catalog.html">Request a Catalog</a></li>
           <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
           <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
-          <!--<li><a href="#"><i class="search fa fa-search search-button"></i></a></li>-->
         </ul>
       </div>
       <!-- Mobile only contact -->
@@ -43,13 +41,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span> 
         </button>
-        <a class="navbar-brand" href="/index.html"><img src="/assets/img/stoneage_logo.png" class="img-responsive"></a>
+        <a class="navbar-brand" href="/"><img src="/assets/img/stoneage_logo.png" class="img-responsive"></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/waterblast-tools-automated-equipment">Waterblast Tools &amp;<br/>Equipment</a></li>
           <li><a href="/sewer-tools">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-          <li><a href="downhole-tools.html">Downhole<br/>Tools</a></li>
+          <li><a href="/downhole-tools">Downhole<br/>Tools</a></li>
         </ul>
       </div>
     </div>
