website jekyll upgrade round-ups - live

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -73,6 +73,7 @@
 
   <!-- contact script dependencies -->
   {% include main-contact.html %}
+  {% include houston-contact.html %}
   
   <!-- Start of Async HubSpot Analytics Code -->
   <script type="text/javascript">
