--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,7 +20,7 @@
       <div class="col-sm-8 utils">
         <ul class="list-inline">
           <li><a href="/contact">Contact Us</a></li>
-          <li><a href="request-catalog.html">Request a Catalog</a></li>
+          <li><a href="/request-catalog">Request a Catalog</a></li>
           <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
           <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
         </ul>
