lightbox, 2L accessories campaign

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,4 +20,7 @@
   <link rel="stylesheet" href="{{ "/assets/css/media.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  
+  <!-- Plugin Styles -->
+  <link href="/assets/plugins/featherlight/featherlight.min.css" type="text/css" rel="stylesheet" />
 </head>
