--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -66,6 +66,7 @@
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="/assets/plugins/featherlight/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="/assets/js/custom.js"></script>
   
   <!-- product slider script dependencies -->
