Finalize web forms, news updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,8 @@
             Durango, CO 81303 <br />
             Phone: +1 970 259 2869 <br />
             Toll Free US: 866 795 1586 <br />
-            Email: <a href="mailto:sales@stoneagetools.com" class="">sales@stoneagetools.com</a>
+            <a href="/contact"><i class="fa fa-envelope"></i> Send us an e-mail</a><br>
+            <a href="/subscribe"><i class="fa fa-paper-plane"></i> Subscribe to E-Blasts</a>
         </address>
       </div>
 
