add new regional locations

--- a/_includes/contact-scriptsNOPE.html
+++ b/_includes/contact-scriptsNOPE.html
@@ -12,5 +12,17 @@
   jQuery(document).ready(function() {    
     MasterSliderShowcase2.initMasterSliderShowcase2();
   });
+  
+  // Inner tab links
+    // Allow Page URL to activate a tab's ID
+    var taburl = document.location.toString();
+    if( taburl.match('#') ) {
+        $('.nav-tabs a[href=#'+taburl.split('#')[1]+']').tab('show');
+    }
+    // Allow internal links to activate a tab.
+    $('a[data-toggle="tab"]').click(function (e) {
+        e.preventDefault();
+        $('a[href="' + $(this).attr('href') + '"]').tab('show');
+    })
 </script>
 {% endif %}
