--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -74,8 +74,11 @@
   {% include master-slider.html %}
 
   <!-- contact script dependencies -->
-  {% include main-contact.html %}
-  {% include houston-contact.html %}
+  {% include contact-main.html %}
+  {% include contact-durango.html %}
+  {% include contact-houston.html %}
+  {% include contact-ohio.html %}
+  {% include contact-la.html %}
   
   <!-- Start of Async HubSpot Analytics Code -->
   <script type="text/javascript">
