--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -551,7 +551,12 @@
               <h2 id="ok">Oklahoma</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-
+                  <h4>J&amp;R Equipment</h4>
+<p>
+<span class="grey">Location:</span> Oklahoma City, OK<br/>
+<span class="grey">Phone:</span> 405 495 5110<br/>
+<span class="grey">Website:</span> <a href="http://jandrequipment.com/" target="_blank">www.jandrequipment.com</a>
+</p>
                 </div>
               </div>
             </li>
