--- a/_includes/contact-la.html
+++ b/_includes/contact-la.html
@@ -1,10 +1,10 @@
-{% if page.main-contact %}
+{% if page.contact-la %}
 <!--Google Maps API-->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnycWatbGyK6ldFqErjFtko1yeMclNUOA&amp;sensor=true"></script>
 <script>
   function initialize() {
     var mapOptions = {
-      center: new google.maps.LatLng(37.1993803,-107.8716067),
+      center: new google.maps.LatLng(30.2112627,-90.9894516),
       zoom: 5,
       mapTypeId: google.maps.MapTypeId.HYBRID,
       scrollwheel: false,
@@ -18,7 +18,7 @@
       rotateControl: true,
     };
     var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-    var contentString = 'StoneAge, Inc. &bull; 466 South Skylane Drive &bull; Durango, CO 81303';
+    var contentString = 'StoneAge Louisiana &bull; 6023 Industrial Dr. &bull; Geismar, LA 70734';
     var infowindow = new google.maps.InfoWindow({
       content: contentString
     });
@@ -32,21 +32,5 @@
     });
   }
   google.maps.event.addDomListener(window, 'load', initialize);
-</script>
-
-<script>
-  // Inner tab links
-
-    // Allow Page URL to activate a tab's ID
-    var taburl = document.location.toString();
-    if( taburl.match('#') ) {
-        $('.nav-tabs a[href=#'+taburl.split('#')[1]+']').tab('show');
-    }
-
-    // Allow internal links to activate a tab.
-    $('a[data-toggle="tab"]').click(function (e) {
-        e.preventDefault();
-        $('a[href="' + $(this).attr('href') + '"]').tab('show');
-    })
 </script>
 {% endif %}
