--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -816,6 +816,11 @@ a.list-group-item:hover {
 }
 
 /* Contact Page */
+#main-map-canvas {
+  width: 100%;
+  height: 400px;
+  margin-bottom: 0;
+}
 #map-canvas {
   width: 100%;
   height: 180px;
