start directory redesign with mixitup

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -79,6 +79,9 @@
   {% include contact-houston.html %}
   {% include contact-ohio.html %}
   {% include contact-la.html %}
+
+  <!-- landing page script dependencies -->
+  {% include landing.html %}
   
   <!-- Start of Async HubSpot Analytics Code -->
   <script type="text/javascript">
