--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,4 +23,5 @@
   
   <!-- Plugin Styles -->
   <link href="/assets/plugins/featherlight/featherlight.min.css" type="text/css" rel="stylesheet" />
+  <link href="/assets/plugins/mixitup/landing-mix.css" type="text/css" rel="stylesheet" />
 </head>
