--- a/assets/plugins/mixitup/landing-mix.css
+++ b/assets/plugins/mixitup/landing-mix.css
@@ -46,18 +46,11 @@
   width: 100%;
 }
 
-.directory p {
-  font-family: "Helvetica Neue", arial, sans-serif;
-  color: #333;
-  font-size: 14px;
-  line-height: 1.4;
-  margin-bottom: 1em;
-  padding: 10px;
-}
-
+/*
 .directory p:last-child{
   margin-bottom: 0;
 }
+*/
 
 .directory .mix,
 .directory .gap{
@@ -67,13 +60,63 @@
 }
 
 .directory .mix{
-  text-align: left;
   border: 1px solid #efefef;
   border-radius: 4px;
   margin-bottom: 2%;
   
   display: none;
 }
+
+.directory .mix h3 {
+  line-height: 1.9rem;
+  padding-bottom: 5px;
+}
+.directory .mix h5 {
+  font-family: "Helvetica Neue", arial, sans-serif;
+  color: #333;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.4;
+  margin-bottom: 1em;
+  padding: 10px;
+  padding-top: 0;
+  margin: 0;
+  text-align: center;
+}
+
+.directory .mix button {
+  display: block;
+  width: 90%;
+  border-radius: 0;
+  margin: 0 auto 10px auto;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: .05rem;
+  font-weight: 400;
+  font-size: 12px;
+}
+
+.directory .mix a button {
+  background-color: #9c8061;
+}
+
+.directory .mix a:hover button {
+  background-color: #81674b;
+}
+
+.filter-by h3 {
+  display: block;
+  width: 100%;
+  padding: 6px;
+  background-color: #888;
+  color: #ddd;
+  margin-bottom: 5px;
+}
+
+.filter-by a:hover {
+  cursor: pointer;
+}
+
 /*
 
 .directory .mix.category-1{
