--- a/assets/plugins/mixitup/landing-mix.css
+++ b/assets/plugins/mixitup/landing-mix.css
@@ -104,13 +104,14 @@
   background-color: #81674b;
 }
 
-.filter-by h3 {
+.filter-by h2 {
   display: block;
   width: 100%;
-  padding: 6px;
+  padding: 6px 10px;
   background-color: #888;
   color: #ddd;
   margin-bottom: 5px;
+  text-align: left;
 }
 
 .filter-by a:hover {
