--- a/assets/plugins/mixitup/landing-mix.css
+++ b/assets/plugins/mixitup/landing-mix.css
@@ -1,6 +1,6 @@
 .landing .controls{
-  padding: 2%;
-  background: #333;
+  padding: 1.7%;
+  background: #424242;
   color: #eee;
 }
 
@@ -12,17 +12,23 @@
 .landing button{
   display: inline-block;
   padding: .4em .8em;
-  background: #666;
+  margin-top: 2px;
+  background: #585858;
   border: 0;
   color: #ddd;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 300;
-  border-radius: 4px;
-  cursor: pointer;
+  border-radius: 0px;
+  border: 1px solid #adadad;
+  cursor: pointer;   
+}
+
+.landing button:hover{
+  background: #9c8061;
 }
 
 .landing button.active{
-  background: #68b8c4;
+  background: #9c8061;
 }
 
 .landing button:focus{
@@ -73,13 +79,12 @@
 }
 .directory .mix h5 {
   font-family: "Helvetica Neue", arial, sans-serif;
-  color: #333;
+  color: #545454;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.4;
   margin-bottom: 1em;
-  padding: 10px;
-  padding-top: 0;
+  padding: 0 20px 10px 20px;
   margin: 0;
   text-align: center;
 }
