--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -345,7 +345,7 @@
                 <div class="col-sm-4">
                   <h4>BC Taechang Industrial Corp.</h4>
                   <p>
-                  <span class="grey">Location:</span> Busan, Korea<br/>
+                  <span class="grey">Location:</span> Kimhae, Korea<br/>
                   <span class="grey">Phone:</span> (+82) 51 442 6191<br/>
                   <span class="grey">Website:</span> <a href="http://www.bcinternational.co.kr" target="_blank">www.bcinternational.co.kr</a>
                   </p>
