add sewer dealer

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -271,7 +271,12 @@
               <h2 id="id">Idaho</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-
+                  <h4>MetroQuip</h4>
+<p>
+<span class="grey">Location:</span> Meridian, ID<br/>
+<span class="grey">Phone:</span> 208 344 3318<br/>
+<span class="grey">Website:</span> <a href="http://metroquip.net/" target="_blank">www.metroquip.net</a>
+</p>
                 </div>
               </div>
             </li>
