Nav pics and new sewer dlr

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -680,7 +680,12 @@
               <h2 id="va">Virginia</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-
+<h4>MSC Equipment</h4>
+<p>
+<span class="grey">Location:</span> Oilville, VA<br/>
+<span class="grey">Phone:</span> 800 969 1672<br/>
+<span class="grey">Website:</span> <a href="http://www.mscequip.net" target="_blank">www.mscequip.net</a>
+</p>
                 </div>
               </div>
             </li>
